fix(css): reduce post padding on mobile

--- a/styles/posts/enhanced-github-markdown.styl
+++ b/styles/posts/enhanced-github-markdown.styl
@@ -2,6 +2,10 @@
 
 .markdown-body {
   padding: 20px 40px;
+  @media only screen and (max-device-width: 600px) {
+    padding: 8px 8px;
+  }
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Lato, Roboto, 'PingFang SC', 'Microsoft YaHei', sans-serif;
   font-size: 16px;
   line-height: 1.75;
